--- a/alert.html
+++ b/alert.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <script src = "./alert.js"></script>   //extract the script content into an external file alert alert.js
         <script>
           alert("I am JavaScript!!!");  //shows the alert message on the web page
         </script>
